EMail, SMS Auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=sideproject
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+spring.datasource.url=jdbc:mariadb://aws-side-project-database.c76w2kkg05pt.ap-southeast-2.rds.amazonaws.com:3306/side_project
+spring.datasource.username=admin
+spring.datasource.password=p1BsPeSTIRjSL6h3rA3V
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
