--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'javax.xml.bind:jaxb-api:2.3.0'
 
+	// Redis 의존성 설정
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 	// S3 의존성 설정
 	implementation 'software.amazon.awssdk:s3:2.20.52'
 
