--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 	// S3 의존성 설정
 	implementation 'software.amazon.awssdk:s3:2.20.52'
 
+	implementation 'net.nurigo:sdk:4.3.0'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
