(0327) Get Message API 수정, Send Message API 추가 및 FCM 토큰 구현

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,10 @@ dependencies {
 	// S3 의존성 설정
 	implementation 'software.amazon.awssdk:s3:2.20.52'
 
+	// FCM 의존성 설정
+	implementation 'com.google.firebase:firebase-admin:9.2.0'
+
+
 	implementation 'net.nurigo:sdk:4.3.0'
 
 	compileOnly 'org.projectlombok:lombok'
