FCM 저장/갱신, OAuth2.0 소셜로그인 구현

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,9 @@ dependencies {
 	// FCM 의존성 설정
 	implementation 'com.google.firebase:firebase-admin:9.2.0'
 
+	// OAuth2 의존성 설정
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
 	implementation 'net.nurigo:sdk:4.3.0'
 
 	compileOnly 'org.projectlombok:lombok'
