fix: 카테고리 관련 누락 수정
* 누락된 카테고리 로직 추가
* 카테고리 관련 레포 분리

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
 	implementation 'net.nurigo:sdk:4.3.0'
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
